--- a/Scouting486/.classpath
+++ b/Scouting486/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/Daniel/Documents/Robotics/2014-2015 Season/xstream-1.4.7/lib/xstream-1.4.7.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
